Makes snippet configurable in webpaste

--- a/webpaste/extension/popup.html
+++ b/webpaste/extension/popup.html
@@ -10,7 +10,7 @@
         </style>
     </head>
     <body>
-        <button id=copy>Repo Links</button>
+        <button id=copy>Copy</button>
         <script src=popup.js></script>
     </body>
 </html>
