--- a/webpaste/extension/options.html
+++ b/webpaste/extension/options.html
@@ -2,26 +2,54 @@
 <html>
     <head>
         <style>
+            body {
+                font-family: sans-serif;
+            }
+
             button {
                 height: 30px;
                 width: 60px;
                 outline: none;
-                margin: 10px;
+            }
+
+            label {
+                display: block;
+                font-weight: bold;
+                margin-bottom: 0.5rem;
+            }
+
+            div.setting {
+                margin: 1rem;
+            }
+
+            input, textarea {
+                width: 500px;
             }
         </style>
     </head>
     <body>
-        <div>
-            Server:
+        <h1>webpaste options</h1>
+        <div class=setting>
+            <label for=server>Server:</label>
             <input type=text id=server>
         </div>
 
-        <div>
-            Token:
+        <div class=setting>
+            <label for=token>Token:</label>
             <input type=text id=token>
         </div>
 
-        <div>
+        <div class=setting>
+            <label for=snippet>Snippet:</label>
+            <textarea id=snippet rows=10 cols=50></textarea>
+        </div>
+
+        <div class=setting>
+            <label for=postSnippet>Post Snippet:</label>
+            <textarea id=postSnippet rows=10 cols=50></textarea>
+        </div>
+
+        <div class=setting>
             <button id=save>Save</button>
         </div>
     </body>
