Adds delete button to webpaste options

--- a/webpaste/extension/options.html
+++ b/webpaste/extension/options.html
@@ -29,6 +29,7 @@
             }
 
             div.snippet {
+                margin-top: 1rem;
                 padding: 1rem;
                 background-color: hsl(0, 0%, 90%);
             }
